force-app/main/default/objects/tc9_et__Rate_Calculator_Configurator__c/tc9_et__Rate_Calculator_Configurator__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>A custom setting used to configure the Rate Calculator</description>
    <label>Time2Pay Rate Calculator Configurator</label>
</CustomObject>