force-app/main/default/objects/tc9_et__Rate_Calculator_Configurator__c/fields/tc9_et__Enable_add_Mark_Up_Margin_function__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_add_Mark_Up_Margin_function__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defines if the ability to add multiple Mark Up / Margin Rates to a Rate Calculator is enabled. If False, there will only be 1 set of Mark Up / Margin Rates applied to the Rate Calculator.</description>
    <inlineHelpText>Defines if the ability to add multiple Mark Up / Margin Rates to a Rate Calculator is enabled. If False, there will only be 1 set of Mark Up / Margin Rates applied to the Rate Calculator.</inlineHelpText>
    <label>Enable add Mark Up / Margin function</label>
    <type>Checkbox</type>
</CustomField>