force-app/main/default/objects/tc9_et__Rate_Calculator_Configurator__c/fields/tc9_et__Enable_Award_Classification_and_Levels__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_Award_Classification_and_Levels__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the award classifications and levels are configurable on a rate calculator org wide.</description>
    <inlineHelpText>Defines if the award classifications and levels are configurable on a rate calculator org wide.</inlineHelpText>
    <label>Enable Award Classification and Levels</label>
    <type>Checkbox</type>
</CustomField>