force-app/main/default/objects/tc9_et__Rate_Calculator_Configurator__c/fields/tc9_et__Enable_Custom_Pay_Rate_2__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_Custom_Pay_Rate_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used for custom rate calculator calculations outside of standard product.</description>
    <inlineHelpText>To be used for custom rate calculator calculations outside of standard product.</inlineHelpText>
    <label>Enable Custom Pay Rate 2</label>
    <type>Checkbox</type>
</CustomField>