force-app/main/default/objects/tc9_et__Rate_Calculator_Configurator__c/fields/tc9_et__Enable_Custom_Post_Cost_2_Employ_Cost__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_Custom_Post_Cost_2_Employ_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if Custom Post Cost 2 Employment Cost is enabled for the Rate Calculator. If False, fields relating to the cost will not be visible on the Rate Calculator and its related components</description>
    <inlineHelpText>Defines if Custom Post Cost 2 Employment Cost is enabled for the Rate Calculator. If False, fields relating to the cost will not be visible on the Rate Calculator and its related components</inlineHelpText>
    <label>Enable Custom Post Cost 2 Employ Cost</label>
    <type>Checkbox</type>
</CustomField>