force-app/main/default/objects/tc9_et__Rate_Calculator_Configurator__c/fields/tc9_et__Enable_Industry__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_Industry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if Industries are enabled for the Rate Calculator. If False, fields relating to the Industry will not be visible on the Rate Calculator and its related components</description>
    <inlineHelpText>Defines if Industries are enabled for the Rate Calculator. If False, fields relating to the Industry will not be visible on the Rate Calculator and its related components</inlineHelpText>
    <label>Enable Industry</label>
    <type>Checkbox</type>
</CustomField>