force-app/main/default/objects/tc9_et__Rate_Calculator_Configurator__c/fields/tc9_et__Enable_Invoice_Tax__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_Invoice_Tax__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defines if Invoice Tax is enabled for the Rate Calculator. If False, fields relating to the Invoice Tax will not be visible on the Rate Calculator and its related components</description>
    <inlineHelpText>Defines if Invoice Tax is enabled for the Rate Calculator. If False, fields relating to the Invoice Tax will not be visible on the Rate Calculator and its related components</inlineHelpText>
    <label>Enable Invoice Tax</label>
    <type>Checkbox</type>
</CustomField>