force-app/main/default/objects/tc9_et__Rate_Calculator_Configurator__c/fields/tc9_et__Enable_location__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable location</label>
    <type>Checkbox</type>
</CustomField>