force-app/main/default/objects/tc9_et__Rate_Calculator_Configurator__c/fields/tc9_et__Enable_Risk_Classification__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_Risk_Classification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if Risk Classifications are enabled for the Rate Calculator. If False, fields relating to the Risk Classification will not be visible on the Rate Calculator and its related components</description>
    <inlineHelpText>Defines if Risk Classifications are enabled for the Rate Calculator. If False, fields relating to the Risk Classification will not be visible on the Rate Calculator and its related components</inlineHelpText>
    <label>Enable Risk Classification</label>
    <type>Checkbox</type>
</CustomField>