force-app/main/default/objects/tc9_et__Rate_Calculator_Configurator__c/fields/tc9_et__Enable_WorkCover_Employment_Cost__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Enable_WorkCover_Employment_Cost__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defines if WorkCover Employment Cost is enabled for the Rate Calculator. If False, fields relating to the cost will not be visible on the Rate Calculator and its related components</description>
    <inlineHelpText>Defines if Worker&apos;s Compensation Employment Cost is enabled for the Rate Calculator. If False, fields relating to the cost will not be visible on the Rate Calculator and its related components</inlineHelpText>
    <label>Enable WorkCover Employment Cost</label>
    <type>Checkbox</type>
</CustomField>