force-app/main/default/objects/tc9_et__Rate_Calculator_Configurator__c/fields/tc9_et__Industry_Required__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Industry_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the Industry field on the Rate Calculator will be required</description>
    <inlineHelpText>Defines if the Industry field on the Rate Calculator will be required</inlineHelpText>
    <label>Industry Required?</label>
    <type>Checkbox</type>
</CustomField>