force-app/main/default/objects/tc9_et__Rate_Calculator_Configurator__c/fields/tc9_et__Location_Required__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Location_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Required?</label>
    <type>Checkbox</type>
</CustomField>